--- a/src/css/default.scss
+++ b/src/css/default.scss
@@ -11,7 +11,7 @@ html, body{
     margin: 0;
     padding: 0;
     height: 100vh;
-    position: relative;
+    position: relative; 
     // font:100% $font-stack;
     box-sizing: border-box;
 }
@@ -233,3 +233,90 @@ $sd-op3:rgba(0,0,0,0.12);
                         0 6px 28px 5px $sd-op3)
 }
 
+
+
+// cursor
+
+//   a {
+//     cursor: none !important;
+//   }
+
+.cursor {
+    position: fixed;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+  }
+  .cursor--small {
+    width: 5px;
+    height: 5px;
+    left: -2.5px;
+    top: -2.5px;
+    border-radius: 50%;
+    z-index: 11000;
+    background: var(--color-text);
+  }
+  .cursor--canvas {
+    width: 100vw;
+    height: 100vh;
+    z-index: 12000;
+  }
+
+  .cursor-wrapper {
+    position: fixed;
+    opacity: 1;
+    width: 100px;
+    height: 100px;
+    left: -50px;
+    top: -50px;
+    transform: translate(-100%, -100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1600000;
+    pointer-events: none;
+    &.has-blend-mode {
+      mix-blend-mode: exclusion;
+    }
+  }
+  .custom-cursor {
+    position: relative;
+    left: 0;
+    top: 0;
+
+    &__outer {
+      width: 6px;
+      height: 6px;
+      border: 2px solid white;
+      background: white;
+      border-radius: 50%;
+    }
+
+    &__inner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      &:before,
+      &:after {
+        content: "";
+        position: absolute;
+        width: 40%;
+        height: 1px;
+        background: white;
+        transition: transform 0.1s linear;
+      }
+      &:before {
+        left: 50%;
+        top: 50%;
+        transform: translateX(-50%);
+      }
+      &:after {
+        left: 50%;
+        top: 50%;
+        transform: translateX(-50%) rotate(-90deg);
+      }
+      &.is-closing:after {
+        transform: translateX(-50%) rotate(0deg);
+      }
+    }
+  }
